--- a/coming-match.html
+++ b/coming-match.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup - Upcoming Match</title>
     <!-- Favicon  -->
-    <link rel="shortcut icon" href="./assets/icons/icon-1.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icons/fav.ico" type="image/x-icon">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style-two.css">
     <!-- Font Awesome  -->
